Задание 2 реализация